--- a/live_demo.ipynb
+++ b/live_demo.ipynb
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -420,9 +420,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: fdr 0.1053, tpr 1.0000, fpr 0.0714, shd 2, nnz 19\n"
+     ]
+    }
+   ],
    "source": [
     "W_est = notears.notears(X, lambda1)\n",
     "G_est = nx.DiGraph(W_est)\n",
